# md2gdoc

./: .claudeignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.md  md2gdoc.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
src/md2gdoc/: __init__.py  cli.py  converter.py
tests/: test_converter.py
